# pamoja

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml  stale.yml
contracts/: Cargo.toml  deploy.sh
contracts/pamoja_factory/: Cargo.toml
contracts/pamoja_factory/src/: lib.rs  test.rs
contracts/pamoja_group/: Cargo.toml
contracts/pamoja_group/src/: lib.rs  test.rs
frontend/: .dockerignore  Dockerfile  next.config.js  next.config.ts  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/groups/[id]/: page.tsx
frontend/src/app/groups/create/: page.tsx
frontend/src/components/: GroupCard.test.tsx  GroupCard.tsx  Navbar.tsx
frontend/src/hooks/: useCreateGroup.ts  useDistribute.ts  useWallet.ts
frontend/src/lib/: contracts.ts  freighter.ts  network.ts  soroban.ts  utils.ts
frontend/src/store/: wallet.ts
