[package]
name = "pamoja_factory"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
pamoja_group = { path = "../pamoja_group", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
